--- a/thank-you.html
+++ b/thank-you.html
@@ -65,7 +65,7 @@ p {
   <p>مبروك 👏  
   أنت الآن بدأت أول خطوة حقيقية نحو التحكم بميزانيتك.</p>
 
-  <a href="https://ndveID.short.gy/smart-budget" class="btn primary">
+  <a href="https://technologyt795-dotcom.github.io/my-website/smart-budget/" class="btn primary">
     🚀 حمّل المنتج الآن
   </a>
 
@@ -76,7 +76,7 @@ p {
   <p>جهزنا لك دليل مبسط يساعدك تستخدم اللوحة بكفاءة أعلى.</p>
   <p>سعره 9 ريال — تحصل عليه الآن مجانًا بالكامل.</p>
 
-  <a href="https://ndveID.short.gy/budget-guide?discount=FREE9" class="btn upsell">
+  <a href="https://technology7.gumroad.com/l/user-guide/FREE9" class="btn upsell">
     📘 احصل على الدليل المجاني
   </a>
 
