--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@ ul li {
 
   <p><strong>ماذا لو ما استفدت؟</strong><br>
   عندك ضمان استرجاع كامل لمدة 7 أيام.</p>
+<h2>🛡️ ضمان استرجاع الأموال</h2>
+<div style="background:#eaf7ef;color:#1e7e34;padding:20px;border-radius:14px;margin-bottom:30px;font-size:1.05rem;line-height:1.6;">
+  إذا لم تشعر بأن المنتج مناسب لك خلال 7 أيام، يمكنك طلب استرجاع المبلغ بكل بساطة.  
+  لا أسئلة ولا نقاش، فقط تواصل معنا وسنرجع لك المبلغ فورًا.  
+  هذا يجعل تجربة الشراء آمنة وبدون أي قلق.
+</div>
+
 
   <h2>الاستثمار في مستقبلك المالي</h2>
   <p>
